@@ -1,5 +1,6 @@
 SUBDIRS=\
 bugs/array \
+bugs/bigoql \
 bugs/quicktour \
 php \
 ruby
